virtual_oss.8: Improve SEE ALSO section
Sponsored by:	The FreeBSD Foundation

--- a/virtual_oss.8
+++ b/virtual_oss.8
@@ -342,12 +342,15 @@ sysctl kern.sched.preempt_thresh=224
 All character devices are created using the 0666 mode which gives
 everyone in the system access.
 .Sh SEE ALSO
+.Xr cuse 3 ,
+.Xr sound 4 ,
+.Xr loader.conf 5 ,
+.Xr sndio 7 ,
+.Xr mixer 8 ,
 .Xr sysctl 8 ,
 .Xr virtual_bt_speaker 8 ,
 .Xr virtual_equalizer 8 ,
-.Xr virtual_oss_cmd 8 ,
-and
-.Xr cuse 3
+.Xr virtual_oss_cmd 8
 .Sh AUTHORS
 .Nm
 was written by
